# mylist

./: CMakeLists.txt  Packaging.cmake  mylist.pc
src/: CMakeLists.txt  list_all.c  list_all_data.c  list_all_struct.c  list_count.c  list_free.c  list_init.c  list_pop.c  list_push.c  mylist.h  mylist_all.c  mylist_all_data.c  mylist_all_struct.c  mylist_count.c  mylist_delete.c  mylist_free.c  mylist_init.c  mylist_pop.c  mylist_push.c
test/: CMakeLists.txt  t-helloworld.c  t-struct.c
