###############################################################################
##
## CMakeLists file for unit test
##
###############################################################################


######################################################################################
### 1) Include the sources
######################################################################################

######################################################################################


######################################################################################
### 2) Specify where CMake can find the libraries
######################################################################################

######################################################################################


######################################################################################
### 3) Define your targets and link the librairies
######################################################################################

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(SOURCES
  t-helloworld
  t-struct
  )

FOREACH(current ${SOURCES})
  ADD_EXECUTABLE(${current} ${current}.c)
  ADD_TEST(${current} ${current})
  TARGET_LINK_LIBRARIES(${current} mylist)
  INSTALL(TARGETS ${current} RUNTIME DESTINATION share/mylist/test COMPONENT test)
ENDFOREACH()

######################################################################################
